manifests/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-demo-app
  namespace: sre-apps
  labels:
    app: sre-demo-app
spec:
  selector:
    app: sre-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
